# src/main/java/co/edu/uniquindio/proyecto/application/dto/response/ErrorDetailResponse.java
@@ -1,0 +1,7 @@
+package co.edu.uniquindio.proyecto.application.dto.response;
+
+public record ErrorDetailResponse(
+        String campo,
+        String mensaje
+) {
+}
